--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,21 +10,16 @@ spring:
       password: ${DB_PASSWORD:password}
       driver-class-name: org.postgresql.Driver
       hikari:
-         initialization-fail-timeout: -1  # 重要：避免啟動時立即失敗
+         initialization-fail-timeout: -1
          connection-timeout: 30000
          maximum-pool-size: 5
-         minimum-idle: 0  # 重要：啟動時不立即建立連線
+         minimum-idle: 0
    jpa:
       hibernate:
          ddl-auto: ${DDL_AUTO:update}
       show-sql: ${SHOW_SQL:true}
-      defer-datasource-initialization: true  # 延遲初始化
+      defer-datasource-initialization: true
+      database-platform: org.hibernate.dialect.PostgreSQLDialect
    sql:
       init:
          mode: never
-
-# 健康檢查不包含資料庫
-management:
-   health:
-      db:
-         enabled: false
